<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.text.TextUtils" />

        <import type="android.view.View" />


        <variable
            name="detail"
            type="com.master.coupon.domain.model.CouponDetails" />
    </data>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout tools:visibility="visible"
            android:visibility="invisible"
            android:id="@+id/llCouponDetail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:fillViewport="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:visibility="visible">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:context=".presentation.coupons.CouponAppliedSheet">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imageView"
                        android:layout_width="140dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="8dp"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:setImageUrl="@{detail.imageUrl}"
                        tools:src="@drawable/ic_coupon_default" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/ic_flag_green_bg"
                        android:gravity="center|end"
                        android:paddingStart="16dp"
                        android:paddingEnd="12dp"
                        android:text="@{detail.label}"
                        android:textColor="@android:color/white"
                        android:textSize="16sp"
                        android:visibility="@{TextUtils.isEmpty(detail.label) ? View.GONE :View.VISIBLE }"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="5000rs"
                        tools:visibility="visible" />

                    <TextView
                        android:id="@+id/tvCopyCoupon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:background="@drawable/view_coupon_bg"
                        android:drawablePadding="4dp"
                        android:gravity="center"
                        android:paddingStart="16dp"
                        android:paddingEnd="16dp"
                        android:text="@{detail.couponCode}"
                        android:textSize="16sp"
                        app:drawableEndCompat="@drawable/ic_copy"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView"
                        tools:text="NFCOS20NFCOS20" />


                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="20dp"
                        android:text="@{detail.title}"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/tvCopyCoupon"
                        tools:text="Get 20% off on  Cosmetics " />

                    <TextView
                        android:id="@+id/textView3s"

                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@{detail.subtitle}"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/textView3"
                        tools:text="On purchase of 4 or more products from the same category" />

                    <View
                        android:id="@+id/divider2"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="16sp"
                        android:background="@color/coupon_apply_border"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@id/textView3s" />

                    <TextView
                        android:id="@+id/tvTermsTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/terms_and_conditions"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/divider2" />

                    <LinearLayout
                        android:id="@+id/llTerms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        app:addTermsConditionBullets="@{detail.tnc}"
                        app:layout_constraintEnd_toEndOf="@+id/tvTermsTitle"
                        app:layout_constraintStart_toStartOf="@+id/tvTermsTitle"
                        app:layout_constraintTop_toBottomOf="@+id/tvTermsTitle" />

                    <TextView
                        android:id="@+id/tvViewAllTerms"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:paddingBottom="16dp"
                        android:text="@string/all_terms_and_conditions"
                        android:textColor="@color/coupon_primary_color"
                        app:layout_constraintEnd_toEndOf="@+id/llTerms"
                        app:layout_constraintStart_toStartOf="@+id/llTerms"
                        app:layout_constraintTop_toBottomOf="@+id/llTerms" />

                    <View
                        android:id="@+id/divider3"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="@color/coupon_apply_border"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/tvViewAllTerms" />

                    <TextView
                        android:id="@+id/freeGiftTitle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textSize="16sp"
                        app:layout_constraintEnd_toEndOf="@+id/textView3"
                        app:layout_constraintStart_toStartOf="@+id/textView3"
                        app:layout_constraintTop_toBottomOf="@+id/divider3"
                        tools:text="Free Gifts Available - 1" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rvFreeItems"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="16dp"
                        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/freeGiftTitle" />

                    <androidx.constraintlayout.widget.Group
                        android:id="@+id/freeItemGroup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"
                        app:constraint_referenced_ids="freeGiftTitle,rvFreeItems,divider3"
                        tools:visibility="visible" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <View
                    android:id="@+id/divider4"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/coupon_apply_border"
                    android:visibility="@{detail.locked ? View.VISIBLE : View.GONE}"
                    app:layout_constraintBottom_toTopOf="@id/tvDelta"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="gone" />

                <TextView
                    android:id="@+id/tvDelta"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="16dp"
                    android:text="@string/add_more_to_cart"
                    android:textColor="@color/coupon_primary_color"
                    android:textSize="16sp"
                    android:visibility="@{detail.locked ? View.VISIBLE : View.GONE}"
                    app:drawableEndCompat="@drawable/ic_arrow_forward"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/divider"
                    tools:visibility="gone" />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/coupon_apply_border"
                    android:visibility="@{detail.locked ? View.GONE : View.VISIBLE}"
                    app:layout_constraintBottom_toTopOf="@id/barrier2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/btRemove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="20dp"

                    android:text="@string/view_coupon_remove"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btCancel"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    />

                <Button
                    android:id="@+id/btApply"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/apply"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    tools:visibility="invisible" />

                <Button
                    android:id="@+id/btCancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"                      android:layout_marginStart="8dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/coupon_cancel"
                    android:textColor="@color/coupon_primary_color"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/btRemove"/>

                <androidx.constraintlayout.widget.Group
                    android:id="@+id/groupRemoveAndCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="btRemove,btCancel"
                    tools:visibility="invisible" />

                <androidx.constraintlayout.widget.Barrier
                    android:id="@+id/barrier2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:barrierDirection="top"
                    app:constraint_referenced_ids="btApply,btRemove,btCancel" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <include
            android:id="@+id/layout_error"
            layout="@layout/coupon_error_screen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider5"
            app:layout_constraintVertical_bias="0.41000003"
            tools:visibility="gone" />

        <ProgressBar
            android:id="@+id/progressBar2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:indeterminate="true"
            android:indeterminateDrawable="@drawable/ic_star_rate"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

           />
    </FrameLayout>

</layout>

